<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ShowOfflinePhraseBookActivity"

    android:background="@color/backgroundColor">

    <RelativeLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="25dp">

        <RelativeLayout
            android:id="@+id/controller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerInParent="true"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/title_offlinePhraseBook"
                android:textColor="@color/word"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"

                android:fontFamily="@font/nunito_bold"
                android:text="@string/close"
                android:textColor="@color/enable"
                android:textSize="16sp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/controller"

            android:layout_marginTop="10dp"
            android:background="@drawable/bg_search_radius"

            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="15dp"
            android:fontFamily="@font/nunito_medium"
            android:gravity="center_vertical"
            android:hint="@string/searchHint"

            android:maxLines="1"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:queryBackground="@android:color/transparent"

            android:textColor="@color/word"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/allTopics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_search"

            android:layout_marginTop="25dp"
            android:fontFamily="@font/nunito_medium"

            android:paddingHorizontal="5dp"
            android:text="@string/title_allTopics"
            android:textAllCaps="true"
            android:textColor="@color/word"
            android:textSize="16sp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar"

        android:background="@color/backgroundColor"

        android:paddingHorizontal="17dp"
        android:scrollbars="none"
        tools:listitem="@layout/item_topic" />
</RelativeLayout>