<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ShowContentActivity"

    android:background="@color/backgroundColor">

    <RelativeLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="25dp">

        <RelativeLayout
            android:id="@+id/controller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"

                android:drawablePadding="3dp"

                android:fontFamily="@font/nunito_bold"
                android:text="@string/back"
                android:textColor="@color/enable"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/title_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerInParent="true"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/title_offlinePhraseBook"
                android:textColor="@color/word"
                android:textSize="18sp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/controller"

            android:layout_marginTop="10dp"

            android:background="@drawable/bg_search_radius"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="10dp"

            android:fontFamily="@font/nunito_medium"
            android:hint="@string/searchHint"
            android:maxLines="1"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:textColor="@color/word"
            android:textSize="16sp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar"

        android:background="@color/white"

        android:scrollbars="none"
        tools:listitem="@layout/item_content" />
</RelativeLayout>